# engine

./: .gitignore  LICENSE.md  Makefile  README.md
engine/: Makefile
engine/include/: application.hpp  core.hpp  engine.hpp  logger.hpp  meta.hpp
engine/include/core/: manager.hpp
engine/include/editor/: editor.hpp
engine/include/tools/: logger.hpp
engine/src/: application.cpp  engine.cpp  logger.cpp
engine/src/core/: manager.cpp
engine/src/editor/: Makefile  editor.cpp
engine/src/tools/: logger.cpp
engine/test/tools/: logger.cpp
include/: app.hpp  editor.hpp  engine.hpp  meta.hpp
include/core/ecs/: component.hpp  entity.hpp  system.hpp
include/core/event/: observer.hpp
include/core/geometry/: primitives.hpp
include/core/graphics/: exception.hpp
include/core/math/: type.hpp
include/core/object/: object.hpp
include/core/render/: api.hpp  shader.hpp  type.hpp
include/core/scene/: entity.hpp  environment.hpp  scene.hpp
include/core/window/: base.hpp  glfw.hpp
include/tools/: logger.hpp  model.hpp
include/tools/debug/: base.hpp
new_structure/: README.md
new_structure/engine/include/: radian.hpp
new_structure/engine/src/: radian.cpp
new_structure/radian/: CMakeLists.txt  Makefile  README.md
new_structure/radian/include/: radian.hpp  radian.hpp.in
new_structure/radian/include/tools/: exception.hpp  logger.hpp
new_structure/radian/src/: radian.cpp
new_structure/radian/src/tools/: logger.cpp
new_structure/sandbox/: CMakeLists.txt  Makefile  app  application.cpp
resources/shaders/: debug-floor-grid.frag  debug-floor-grid.vert  default.frag  default.vert  material.frag  model.frag  model.vert  position-texture.frag  position-texture.vert
sandbox/: Makefile
sandbox/src/: main.cpp
src/: app.cpp  editor.cpp  main.cpp
src/tools/: logger.cpp  model.cpp
(+71 files in other folders)
